--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,4 +1,16 @@
+/* Style all P tags */
+
 p{
     font-size: 18px;
     color: red;
+}
+
+#header p {
+    font-siza: 24px;
+}
+
+/* Style all header tags */
+
+h1 {
+    font-size: 44px;
 }
