--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,23 +1,18 @@
-/* TARGETING ELEMENTS / TAGS */
+/* TARGETING ELEMENTS / CLASSES & IDs */
+h2{
+    font-size: 24px;
+}
 
-p{
-    font-size: 12px;
+#content-header{
+    font-size: 18px;
     color: red;
 }
 
-a{
-text-decoration: underline;
-color: blue;
-}
 span{
-    text-transform: uppercase;
+    display: block;
+    color: blue;
 }
 
-h1{
-    font-size: 32px;
-}
-
-div{
-    width: 100%;
-    background-color: grey;
+.deck{
+    color: red;
 }
