--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,11 +1,4 @@
-#header h1{
-    color: chocolate;
-}
-
-#header h2{
-    color: #567856;
-}
-
-#header{
-    background: antiquewhite;
+p{
+    font-size: 12px;
+    line-height: 1,5em;
 }
