--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,5 +1,8 @@
 .box{
-    margin: 30px;
-    padding: 30px 20%;
+    padding: 20px;
     border: 1px solid #000000;
+}
+
+.small{
+    padding-left: 5px;
 }
