--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,8 +1,5 @@
 .static-width{
     width: 300px;
     height: 300px;
-    background-image: url();
-    background-repeat: no-repeat; 
-    background-position: center;
-    background-size: 200px;
+    background: url(https://thenetninja.blob.core.windows.net/thenetninja/images/icons/white-star.png) no-repeat top center;   
 }
