--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,5 +1,8 @@
-.static-width{
-    width: 300px;
+#banner{
+    background-color: #606060;
+    width: 100%;
     height: 300px;
-    background: url(https://thenetninja.blob.core.windows.net/thenetninja/images/icons/white-star.png) no-repeat top center;   
+    background-image: url(), url();
+    background-repeat: no-repeat;
+    background-position: center, top left; 
 }
