--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,8 +1,5 @@
 #banner{
-    background-color: #606060;
+    background-color: rgb(250, 150, 60);
     width: 100%;
     height: 300px;
-    background-image: url(), url();
-    background-repeat: no-repeat;
-    background-position: center, top left; 
 }
